kubernetes/splike-user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splike-user
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: splike-user
  template:
    metadata:
      labels:
        app: splike-user
    spec:
      # serviceAccountName: splike-user
      terminationGracePeriodSeconds: 30
      containers:
        - name: splike-user
          image: asia-northeast1-docker.pkg.dev/splike/splike-user/latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 2
          resources:
            requests:
              cpu: 250m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 2048Mi
