kubernetes/splike-user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splike-user
spec:
  type: NodePort
  ports:
    - name: splike-user
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: splike-user
