kubernetes/splike-user/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splike-user
  annotations:
    kubernetes.io/ingress.global-static-ip-name: splike-user
spec:
  defaultBackend:
    service:
      name: splike-user
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: splike-user
            port:
              number: 80
